--- a/root/css/addconsultant.css
+++ b/root/css/addconsultant.css
@@ -2,11 +2,10 @@
 body{
   padding: 0%;
   margin:0%;
-  font-family: 'Lato';
+ font-family: "Montserrat";
 }
 .navbar{
   background-color: black;
-/*  height: 90px;*/
 }
 .navbar-brand{
 font-family: 'Ubuntu';
@@ -14,57 +13,28 @@ font-family: 'Ubuntu';
   color:lightcoral !important;
 }
 .nav-link{
-  font-size:20px;
-  margin-right: 40px;
-  /*float: right;*/
+  font-size:18px;
+  margin-right: 28px;
   color:white !important;
   font-family: 'Roboto condense';
 }
 .nav-link:hover{
-  color:green !important ;/*#00E8E8 !important;*/
+  color:#89CFF0 !important ;
 }
 .active .nav-link{
-  color:Green !important;/*#00E8E8 !important;*/
+  color:#89CFF0 !important;
 }
 .emp{
   color:gray;
   font-size: 40px;
 }
+.emp:hover{
+  color:#89CFF0 !important;
+}
 .dropdown:hover>.dropdown-menu{
   display:block;
 }
-.menu-right-btn:hover{
-  color:white;
-  background-color:#4CBB17;/* #00E8E8;*/
-}
-.text{
-  text-decoration: none;
-  color:red;
-}
-.site-content{
-  background-image: url("../images/pexels-christina-morillo-1181344.jpg");
-  background-attachment: fixed;
-  height:800px;
-  background-size: cover;
-}
-.site-title, .site-desc{
-  font-family: 'Righteous';
- color:black;
-}
-.site-title{
-  margin-top: 30%;
-  margin-bottom: 6%;
-  font-size: 50px;
-  color:#4CBB17;
-}
-.site-desc{
-  font-size: 14px;
-  font-size: 40px;
-}
 
-.flex-column{
-  color:black;
-}
 /*form*/
 section{
   background:url("../images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg") no-repeat center fixed;
@@ -350,6 +320,10 @@ margin-top: 80px;
     width: 100%;
     margin-bottom: 140px;
     text-align: center;
+  }
+  .footer-distributed .footer-left{
+    margin-left:18px;
+    margin-top: 20px;
   }
     .footer-distributed .footer-center{
       margin-right: 10px;
