--- a/root/css/styles.css
+++ b/root/css/styles.css
@@ -3,61 +3,51 @@
 body{
   padding: 0%;
   margin:0%;
+  font-family: "Montserrat";
   /*font-family: 'Lato';*/
-  font-family: 'Open Sans',Arial, Helvetica, sans-serif;
 }
 .navbar{
   background-color: black;
-  height: 100px;
 }
 .navbar-brand{
-/*font-family: 'Ubuntu';*/
-  font-size: 35px;
-  color:lightcoral !important;
+  font-family: 'Ubuntu';
 }
 .nav-link{
-  font-size:20px;
-  margin-right: 40px;
-  float: right;
+  font-size:18px;
+  letter-spacing: 0.5px;
+  margin-right: 28px;
   color:white !important;
   /*font-family: 'Roboto condense';*/
 }
 .nav-link:hover{
-  color:green !important ;/*#00E8E8 !important;*/
+  color:#89CFF0 !important ;
 }
 .active .nav-link{
-  color:Green !important;/*#00E8E8 !important;*/
+  color:#89CFF0 !important;
 }
-.menu-right-btn{
-  padding: 13px 46px;
-  margin-right: 1%;
-  font-size: 20px;
-  background-color: transparent;
-  transition: all 300ms ease-in;
+.dropdown:hover>.dropdown-menu{
+  display:block;
 }
-.text{
-  text-decoration: none;
-  color:red;
+.emp{
+  color:gray;
+  font-size: 40px;
 }
-/*animated images*/
+.emp:hover{
+  color:#89CFF0 !important;
+}
+/*section1*/
 *,*:after,*before{
   -webkit-box-sizing:border-box;
   -moz-box-sizing:border-box;
   -ms-box-sizing:border-box;
   box-sizing:border-box;
 }
-/*body{
-  font-family: arial;
-  font-size: 16px;
-  margin: 0;
-  background: #fff;
-}*/
 .slide-container{
   display: flex;
 }
 .slide-box{
   flex-basis: 33.333%;
-  height: 85vh;
+  height: 80vh;
   padding: 40px;
   display: flex;
   align-items: flex-end;
@@ -82,7 +72,6 @@ body{
 .slide-box-containt{
   padding: 30px;
   color: #fff;
-  /*background: rgba(0, 0, 0, 0.8);*/
   font-size: 18px;
   opacity: 0;
   position: relative;
@@ -91,387 +80,40 @@ body{
 .slide-box:hover .slide-box-containt{
   left: 20;
   opacity: 1;
-  margin-bottom: 30%;
-  margin-left: 30%;
+  margin-bottom: 20%;
+  margin-left: 20%;
   transition: all 0.4s ease-out 0.6s;
 }
 .slide-box-containt h2{
   margin:0 0 20px;
   font-size: 40px;
+  color:#0087BD;
+    font-family: "Montserrat-Bold";
+/*  font-family: 'Roboto condense';*/
 }
 .slide-box-containt p:last-child{
   margin: 0;
   font-size: 20px;
+  font-family: 'Roboto condense';
 }
-
-
-
-
-/*.site-content{
- /*background-image: url("../images/sebastian-herrmann-O2o1hzDA7iE-unsplash.jpg")linear-gradient(to left,rgba(28,112,196,.2),white);*/
-/*  background: url("../images/sebastian-herrmann-O2o1hzDA7iE-unsplash.jpg");
-  text-shadow:none;
- /*background-attachment: fixed;*/
-/* background: rgba(28,112,196,.2)rgba(2,0,0,0.5)*/
-/*  height:800px;
-  background-size: cover;
-}
-.flex-column{
-  margin-left: 40px;
-}
-.site-title, .site-desc{
-  font-family: 'Righteous';
- color:steelblue;
-}
-.site-title{
-  margin-top: 14%;
-  margin-left: 2px;
-  font-size: 50px;
-  color:midnightblue;/*#4CBB17;*/
-}
-.site-desc{
-    font-size: 40px;
-}
-
-.flex-column{
-  color:black;
-}*/
-/*searchbar*/
-.wrapper{
-  position: absolute;
-  top: 110%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-}
-
-.wrapper .search_box{
-  width: 900px;
-  background: #fff;
-  border-radius: 5px;
-  height: 65px;
-  display: flex;
-  padding: 10px;
-  box-shadow: 0 8px 6px -10px #b3c6ff;
-}
-
-.wrapper .search_box .dropdown{
-  width: 190px;
-  border-right: 2px solid #dde2f1;
-  color: #9fa3b1;
-  position: relative;
-  cursor: pointer;
-}
-
-.wrapper .search_box .dropdown .default_option{
-  text-transform: uppercase;
-  padding: 13px 15px;
-  font-size: 14px;
-}
-
-.wrapper .search_box .dropdown ul{
-  position: absolute;
-  top: 70px;
-  left: -10px;
-  background: #fff;
-  width: 150px;
-  border-radius: 5px;
-  padding: 20px;
-  display: none;
-  box-shadow: 8px 8px 6px -10px #b3c6ff;
-}
-
-.wrapper .search_box .dropdown ul.active{
-  display: block;
-}
-
-.wrapper .search_box .dropdown ul li{
-  padding-bottom: 20px;
-}
-
-.wrapper .search_box .dropdown ul li:last-child{
-  padding-bottom: 0;
-}
-
-.wrapper .search_box .dropdown ul li:hover{
-  color: #6f768d;
-}
-
-.wrapper .search_box .dropdown:before{
-  content: "";
-  position: absolute;
-  top: 18px;
-  right: 20px;
-  border: 8px solid;
-  border-color: orange transparent transparent transparent;
-}
-
-.wrapper .search_box .dropdown1{
-  width: 190px;
-  border-right: 2px solid #dde2f1;
-  color: #9fa3b1;
-  position: relative;
-  cursor: pointer;
-}
-
-.wrapper .search_box .dropdown1 .default_option1{
-  text-transform: uppercase;
-  padding: 13px 15px;
-  font-size: 14px;
-}
-
-.wrapper .search_box .dropdown1 ul{
-  position: absolute;
-  top: 70px;
-  left: -10px;
-  background: #fff;
-  width: 150px;
-  border-radius: 5px;
-  padding: 20px;
-  display: none;
-  box-shadow: 8px 8px 6px -10px #b3c6ff;
-}
-
-.wrapper .search_box .dropdown1 ul.active{
-  display: block;
-}
-
-.wrapper .search_box .dropdown1 ul li{
-  padding-bottom: 20px;
-}
-
-.wrapper .search_box .dropdown1 ul li:last-child{
-  padding-bottom: 0;
-}
-
-.wrapper .search_box .dropdown1 ul li:hover{
-  color: #6f768d;
-}
-
-.wrapper .search_box .dropdown1:before{
-  content: "";
-  position: absolute;
-  top: 18px;
-  right: 20px;
-  border: 8px solid;
-  border-color:orange transparent transparent transparent;/*#5078ef*/
-}
-
-.wrapper .search_box .search_field{
-  width: 490px;
-  height: 100%;
-  position: relative;
-}
-
-.wrapper .search_box .search_field .input{
-  width: 100%;
-  height: 100%;
-  border: 0px;
-  font-size: 16px;
-  padding-left: 20px;
-  padding-right: 38px;
-  color: #6f768d;
-}
-
-.wrapper .search_box .search_field .search{
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  font-size: 22px;
-  color:orange;/* #5078ef;*/
-  cursor: pointer;
-}
-
-::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-  color: #9fa3b1;
-}
-::-moz-placeholder { /* Firefox 19+ */
- color: #9fa3b1;
-}
-:-ms-input-placeholder { /* IE 10+ */
-  color: #9fa3b1;
-}
-
-
-
-/*--*/
-.dropdown:hover>.dropdown-menu{
-  display:block;
-}
-.menu-right-btn:hover{
-  color:white;
-  background-color:#4CBB17;/* #00E8E8;*/
-}
-
-.carousel-item {
-	height: 100vh;
-	min-height: 300px;
-	background: no-repeat center center scroll;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
-}
-.carousel-caption {
-	bottom: 270px;
-}
-.carousel-caption h5 {
-	font-size: 45px;
-	text-transform: uppercase;
-	letter-spacing: 2px;
-	margin-top: 25px;
-}
-.carousel-caption p {
-	width: 75%;
-	margin: auto;
-	font-size: 18px;
-	line-height: 1.9;
-}
-.navbar-light .navbar-brand {
-	color: #fff;
-	font-size: 25px;
-	text-transform: uppercase;
-	font-weight: bold;
-	letter-spacing: 2px;
-}
-.navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show>.nav-link {
-	color: #fff;
-}
-.navbar-light .navbar-nav .nav-link {
-	color: #fff;
-}
-.navbar-toggler {
-	background: #fff;
-}
-.navbar-nav {
-	text-align: center;
-}
-.nav-link {
-	padding: .2rem 1rem;
-}
-.nav-link.active, .nav-link:focus {
-	color: #fff;
-}
-.navbar-toggler {
-	padding: 1px 5px;
-	font-size: 18px;
-	line-height: 0.3;
-}
-.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
-	color: #fff;
-}
-.emp{
-  font-size:40px;
-  color: gray;
-}
-
-
-
-/*section1*/
-/*.icon{//changed section
-  font-size: 140px;
-  color: gray;
-  margin-bottom: 10px;
-  margin-top: 30px;
-}
-.section-1 .heading-1{
-  margin-top: 8%;
-  margin-bottom: 70px;
-}
-.section-1 .heading-2{
-  margin-bottom: 5%;
-  font-size: 39px;
-}
-.section-1 .para-1{
-  width: 60%;
-  margin-left: 20%;
-  margin-bottom: 5%;
-}
-.section-1 .card-text, .para-1{
-  color: rgba(0, 0, 0, 0.59);
-  margin-top: 10px;
-}
-.section-1{
-  margin-bottom: 8%;
-}
-.card{
-  width: 20rem;
-}
-.card-body a{
-  text-decoration: none;
-    color: rgba(0, 0, 0, 0.59);
-
-    width: 150px;
-    text-decoration: none;
-    display: inline-block;
-    margin: 0 10px;
-    padding: 12px 0;
-    color: #fff;
-    border: .5px solid #fff;
-    position: relative;
-    z-index: 1;
-    transition: color 0.5s;
-}
-.card-body a span{
-  width: 0;
-  height: 100%;
-  position: absolute;
-  top:0;
-  left: 0;
-  background: #fff;
-  z-index:-1;
-  transition: 0.5s;
-}
-.card-body a:hover span{
-  width: 100%;
-}
-.card-body a:hover{
-  color: #000;
-}
-
-
-
-
-.card-text:hover{
-  color:#4cbb17;
-}*/
-.title-text{
-  text-align: center;
-  padding-bottom: 70px;
-}
-/*.title-text p{
-  margin: auto;
-  font-size: 20px;
-  color: #009688;
-  font-weight: bold;
-  position: relative;
-  z-index:1;
-  display: inline-block;
-}
-.title-text p::after{
-  content: '';
-  width: 50px;
-  height: 35px;
-  background: linear-gradient(#019587,#fff);
-  position: absolute;
-  top:-20px;
-  left: 0;
-  z-index: -1;
-  transform: rotate(10deg);
-  border-top-left-radius: 35px;
-  border-bottom-right-radius: 35px;
-}*/
-.title-text h1{
-  font-size: 50px;
-    margin-top: 8%;
-    margin-bottom: 70px;
-  font-family: 'Ubuntu';
-  }
-}
+/*section2*/
 #service{
   width: 100%;
   padding: 76px 0;
-  background: #efefef;
+  background:white;/* #efefef;*/
 }
+.title-text{
+  text-align: center;
+  padding-bottom:70px;
+}
+.title-text h1{
+  font-size: 40px;
+    margin-top: 4%;
+    color: #0087BD;
+  margin-bottom: 40px;
+  font-family: "Montserrat-Bold";
+  /*font-family: 'Ubuntu';*/
+  }
 .service-box{
   width: 80%;
   display: flex;
@@ -548,52 +190,34 @@ hr{
   }
 }
 
-
-
-
-/*section-2*/
-
-.section-2 .container-fluid{
-  background-image: url('../images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg');
-  background-size: cover;
-  background-attachment: fixed;
-}
-.section-2 .heading-1{
-  margin-top: 20%;
-  margin-bottom: 4%;
-  font-family: 'Righteous';
-  width: 80%;
-  color: whitesmoke;
-}
-.section-2 .para{
-  width: 80%;
-  font-family: 'Ubuntu';
-  color: whitesmoke;
-  margin-bottom: 7%;
-}
-.section-2 .btn{
-  margin-bottom: 15%;
-  width:30%;
-  padding: 2% 5%;
-}
-/*section*/
+/*section-3*/
 .section-3{
-  margin-top:6%;
+  margin-top:1%;
+
+  height: 520px;
 }
-.section-3 i{
-  color: #00EBEB;
+.sec1{
+  padding-top: 50px;
 }
 .section-3 p{
-  color: rgba(0, 0, 0, 0.59);
+  color:rgba(0, 0, 0, 0.59);
 }
-
-/*section 4*/
+@media screen and (max-width:770px){
+  .section-3{
+    height: 100%;
+  }
+}
+/*section-4*/
 .section-4{
   margin-top: 8%;
+  background-color: #023246;
 }
 .section-4 .row .col-md-7, .col-md-5{
   margin-top: 10%;
   margin-bottom: 10%;
+}
+.section-4 h1{
+  font-size: 30px;
 }
 .section-4 a{
   color:lightseagreen;
@@ -601,45 +225,36 @@ hr{
   text-decoration: none;
 }
 .section-4 .para-1{
-  color: white;
-  font-family: 'Roboto Condensed';
+    color: #8f8f8f;
+  /*font-family: 'Roboto Condensed';*/
   margin-top:7%;
-  font-size: 23px;
+  font-size: 18px;
 }
-/*section*/
-.customer-logos {
-  background-color: #111;
-}
-
-/* Slider */
+/* section-5 */
 .section-header h3 {
      font-size: 36px;
      color: #283d50;
      text-align: center;
      font-weight: 500;
-     position: relative
+     position: relative;
  }
-
  .section-header p {
      text-align: center;
      margin: auto;
      font-size: 15px;
      padding-bottom: 60px;
      color: #556877;
-     width: 50%
+     width: 50%;
  }
-
- #clients {
+#clients {
      padding: 60px 0
  }
-
- #clients .clients-wrap {
-     border-top: 1px solid #d6eaff;
-     border-left: 1px solid #d6eaff;
+#clients .clients-wrap {
+    /* border-top: 1px solid #d6eaff;
+     border-left: 1px solid #d6eaff;*/
      margin-bottom: 30px
  }
-
- #clients .client-logo {
+#clients .client-logo {
      padding: 64px;
      display: -webkit-box;
      display: -webkit-flex;
@@ -653,26 +268,47 @@ hr{
      -webkit-align-items: center;
      -ms-flex-align: center;
      align-items: center;
-     border-right: 1px solid #d6eaff;
-     border-bottom: 1px solid #d6eaff;
+    /* border-right: 1px solid #d6eaff;
+     border-bottom: 1px solid #d6eaff;*/
      overflow: hidden;
      background: #fff;
      height: 160px
  }
-
- #clients img {
+#clients img {
      transition: all 0.4s ease-in-out
+ }
+ @media screen and (max-width:770px){
+   #clients {
+        padding: 120px 0
+    }
+   #clients .clients-wrap {
+        border-top: 1px solid #d6eaff;
+        border-left: 1px solid #d6eaff;
+        margin-bottom: 90px
+    }
+    #clients .client-logo {
+         padding: 124px;
+         display: -webkit-box;
+         display: -webkit-flex;
+         display: -ms-flexbox;
+         display: flex;
+         -webkit-box-pack: center;
+         -webkit-justify-content: center;
+         -ms-flex-pack: center;
+         justify-content: center;
+         -webkit-box-align: center;
+         -webkit-align-items: center;
+         -ms-flex-align: center;
+         align-items: center;
+         border-right: 1px solid #d6eaff;
+         border-bottom: 1px solid #d6eaff;
+         overflow: hidden;
+         background: #fff;
+         height: 160px
+     }
  }
 
 /*footer*/
-.main {
-  max-height: 50px;
-  background-color: #292c2f;
-  color: white;
-  font-size: 38pt;
-  text-align: center;
-  line-height: 100px;
-}
 footer{
   position: 0;
   bottom: 0;
@@ -793,10 +429,9 @@ margin-top: 80px;
   color:  #92999f;
   font-size: 18px;
   font-weight: normal;
-  margin-top: 20px;
+  margin-top: 6px;
 
 }
-
 .footer-distributed .footer-company-about{
   line-height: 30px;
   color:  #92999f;
@@ -813,10 +448,9 @@ margin-top: 80px;
   font-weight: bold;
   margin-bottom: 30px;
 }
-.footer-distributed .footer-company-about{
-
+.footer-distributed .footer-right h2{
+  color: white;
 }
-
 .footer-distributed .footer-icons{
   margin-top: 25px;
 }
@@ -830,7 +464,7 @@ margin-top: 80px;
   border-radius: 2px;
 
   font-size: 20px;
-  color:#ffffff;
+  color: #ffffff;
   text-align: center;
   line-height: 35px;
 
@@ -865,6 +499,10 @@ margin-top: 80px;
     width: 100%;
     margin-bottom: 140px;
     text-align: center;
+  }
+  .footer-distributed .footer-left{
+    margin-left:18px;
+    margin-top: 20px;
   }
     .footer-distributed .footer-center{
       margin-right: 10px;
