--- a/root/css/styles.css
+++ b/root/css/styles.css
@@ -47,7 +47,7 @@ body{
 }
 .slide-box{
   flex-basis: 33.333%;
-  height: 80vh;
+  height: 96vh;
   padding: 40px;
   display: flex;
   align-items: flex-end;
@@ -74,6 +74,7 @@ body{
   color: #fff;
   font-size: 18px;
   opacity: 0;
+  background: rgba(0, 0, 0, 0.5);
   position: relative;
   left: -30px;
 }
