--- a/root/css/jobreg.css
+++ b/root/css/jobreg.css
@@ -45,10 +45,9 @@ section{
   min-height: 100vh;
   display: flex;
   font-family: sans-serif;
-  font-style: italic;
   position:relative;
   padding:150px 100px 100px;
-  font-family: "georgian",sans-serif;
+
   width: 100%;
    background-position: center;
   background-size: 1900px;
@@ -59,14 +58,12 @@ section{
 h1{
   color: gray;
   text-align: center;
-  font-style: italic;
   padding: 20px;
 }
 .reg h2{
   color: white;
   text-align: center;
   margin: 40px 10px;
-  font-style: italic;
 }
 .loc{
   margin-top: 15px;
@@ -77,7 +74,6 @@ h1{
 label{
   color: #FFFFFF;/*white;*/
  font-size: 20px;
-  font-style: italic;
 }
 .reg{
   width:800px;
@@ -101,12 +97,10 @@ label{
 #ma{
   color: white;
  font-size: 20px;
-  font-style: italic;
 }
 #ch{
   color: white;
  font-size: 20px;
-  font-style: italic;
 }
 #sub{
   width: 300px;
@@ -115,233 +109,135 @@ label{
   border:1px solid gray;//groove;
   color: white;
  font-size: 20px;
-  font-style: italic;
   background-color: #487948;
   margin-left: 40px;
   margin-bottom: 50px;
   margin-top: 30px;
 }
 /*footer*/
-.main {
-  max-height: 50px;
-  background-color: #292c2f;
-  color: white;
-  font-size: 38pt;
-  text-align: center;
-  line-height: 100px;
-}
 footer{
-  position: 0;
-  bottom: 0;
-}
-.footer-distributed{
-  background-color: #292c2f;
-  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
-  box-sizing: border-box;
+  bottom: 0px;
   width: 100%;
-  text-align: left;
-  font: bold 16px sans-serif;
-  height:400px;
-  padding: 55px 50px;
-margin-top: 80px;
+  background: #111;
+  color: #d9d9d9;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
-
-.footer-distributed .footer-left,
-.footer-distributed .footer-center,
-.footer-distributed .footer-right{
-  display: inline-block;
-  vertical-align: top;
+.main-content{
+  display: flex;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
-
-.footer-distributed .footer-left{
-  width: 30%;
-  margin-left: 60px;
+.main-content .box{
+  flex-basis: 50%;
+  padding: 40px 20px;
 }
-.footer-distributed .footer-left h2{
-  font-size: 30px;
-  color: white;
+.box h2{
+  font-size: 1.125rem;
+  font-weight: 600;
+  /*text-transform: uppercase;*/
 }
-.footer-distributed h3{
-  color:  #ffffff;
-  font: normal 36px 'Cookie', cursive;
-  margin: 0;
+.left{
+  margin-left: 20px;
 }
-
-.footer-distributed h3 span{
-  color:  #5383d3;
-}
-.footer-distributed .footer-links{
-  color:  #ffffff;
-  margin: 20px 0 12px;
-  padding: 0;
-}
-
-.footer-distributed .footer-links a{
-  display:inline-block;
-  line-height: 2.8;
-  text-decoration: none;
-  color:  inherit;
-}
-.footer-distributed .foot1{
-  margin-top: 40px;
-}
-.footer-distributed .footer-company-name{
-  color:  #8f9296;
-  font-size: 14px;
-  font-weight: normal;
-  margin: 0;
-}
-
-.footer-distributed .footer-center{
-  width: 35%;
-  line-height: 10px;
-  color:  #92999f;
-  font-size: 18px;
-  font-weight: normal;
-  margin-left: 10px;
-  margin: 0;
-}
-
-.footer-distributed .footer-center i{
-  background-color:  #33383b;
-  color: #ffffff;
-  font-size: 25px;
-  width: 38px;
-  height: 38px;
-  border-radius: 50%;
-  text-align: center;
-  line-height: 42px;
-  margin: 10px 15px;
-  vertical-align: middle;
-}
-
-.footer-distributed .footer-center i.fa-envelope{
-  font-size: 17px;
-  line-height: 38px;
-}
-
-.footer-distributed .footer-center p{
-  display: inline-block;
-  color: #ffffff;
-  vertical-align: middle;
-  margin:0;
-}
-
-.footer-distributed .footer-center p span{
-  display:block;
-  font-weight: normal;
-  font-size:14px;
-  line-height:2;
-}
-.footer-distributed .footer-center h2{
-  color: white;
-}
-.footer-distributed .footer-center p{
-  color: #92999f;/*  #5383d3;*/
-  text-decoration: none;
-  margin-top: 40px;
-}
-
-.footer-distributed .footer-right{
-  width: 27%;
-  line-height: 20px;
-  color:  #92999f;
-  font-size: 18px;
-  font-weight: normal;
-  margin-top: 20px;
-
-}
-
-.footer-distributed .footer-company-about{
-  line-height: 30px;
-  color:  #92999f;
+.left p{
   font-size: 15px;
-  font-weight: normal;
-  letter-spacing: 1px;
-  margin: 0;
 }
-
-.footer-distributed .footer-company-about span{
-  display: block;
-  color:  #ffffff;
-  font-size: 34px;
-  font-weight: bold;
-  margin-bottom: 30px;
+.box .content{
+  margin: 20px 0 0 0;
+  position: relative;
 }
-.footer-distributed .footer-company-about{
+.box .content:before{
+  position: absolute;
+  content: '';
+  top: -10px;
+  height: 2px;
+  width: 100%;
+ background: #1a1a1a;
+}
+.box .content:after{
+  position: absolute;
+  content: '';
+  height: 2px;
+/*  width: 15%;*/
+  background: #f12020;
+  top: -10px;
+}
+.left .content p{
+  text-align: justify;
+}
+.left .content .social{
+  margin: 20px 0 0 0;
 
 }
-
-.footer-distributed .footer-icons{
-  margin-top: 25px;
+.left .content .social a{
+  padding: 0 2px;
+    color: white;
 }
-
-.footer-distributed .footer-icons a{
-  display: inline-block;
-  width: 35px;
-  height: 35px;
-  cursor: pointer;
-  /*background-color:  #33383b;*/
-  border-radius: 2px;
-
-  font-size: 20px;
-  color: #ffffff;
+.left .content .social a span{
+  height: 40px;
+  width: 40px;
+  background: #1a1a1a;
+  line-height: 40px;
   text-align: center;
-  line-height: 35px;
-
-  margin-right: 3px;
-  margin-bottom: 5px;
+  font-size: 18px;
+  border-radius: 5px;
+  transition: 0.3s;
 }
-.address{
-
-  line-height: 20px;
-  color:  #92999f;
-  font-size: 19px;
-  font-weight: normal;
-  margin: 0;
-  margin-top: 20px;
-  line-height: 32px;
+.left .content .social a span:hover{
+  background: #89CFF0;
+    color: gray;
 }
-/*media queriws*/
-@media (max-width: 880px) {
-
-  .footer-distributed{
-    font: bold 14px sans-serif;
-    background-color: #292c2f;
-    height: 100%;
-    text-align: center;
-
-  }
-
-  .footer-distributed .footer-left,
-  .footer-distributed .footer-center,
-  .footer-distributed .footer-right{
-    display: block;
-    width: 100%;
-    margin-bottom: 140px;
-    text-align: center;
-  }
-  .footer-distributed .footer-left{
-    margin-left:18px;
-    margin-top: 20px;
-  }
-    .footer-distributed .footer-center{
-      margin-right: 10px;
-    }
-  .footer-distributed .footer-center i{
-    margin-left: 0;
-  }
-  .main {
-    line-height: normal;
-    font-size: auto;
-  }
-
+.center{
+  margin-left: 80px;
 }
-
-
-
-@media screen and(max-width:320px){
-      footer input[type="button"]{
-        margin-top: 5%;
-      }
+.center .content .fas{
+  font-size: 1.4375rem;
+  background: #1a1a1a;
+  height: 45px;
+  width: 45px;
+  line-height: 45px;
+  text-align: center;
+  border-radius: 50%;
+  transition: 0.3s;
+  cursor: pointer;
+}
+.center .content .fas:hover{
+  background: #89CFF0;
+  color: gray;
+}
+.center .content .text{
+  font-size:15px;/* 1.0625rem;*/
+  font-weight: 500;
+  padding-left: 10px;
+}
+.center .content .phone{
+  margin: 15px 0;
+}
+.right h2{
+    margin-left: 40px;
+}
+.right .content{
+  margin-left: 45px;
+}
+.right .content .link{
+  text-decoration: none;
+    color: white;
+}
+.right .content .link:hover{
+  text-decoration: none;
+  color: #89CFF0;
+}
+@media screen and (max-width: 900px) {
+  footer{
+    position: relative;
+    bottom: 0px;
+  }
+  .main-content{
+    flex-wrap: wrap;
+    flex-direction: column;
+  }
+  .main-content .box{
+    margin: 5px 0;
+  }
 }
