--- a/root/css/styles.css
+++ b/root/css/styles.css
@@ -42,18 +42,20 @@ body{
   -ms-box-sizing:border-box;
   box-sizing:border-box;
 }
+
 .slide-container{
   display: flex;
 }
 .slide-box{
   flex-basis: 33.333%;
-  height: 96vh;
+  height: 100vh;
   padding: 40px;
   display: flex;
   align-items: flex-end;
   position: relative;
   overflow: hidden;
-  border-right: 6px solid #fff;
+    border-right: 6px solid #fff;
+  /*border-right: 1px solid #000;*/
   transition: all 0.6s ease-out;
   background-size: auto 120%;
   background-position: center center;
@@ -72,36 +74,49 @@ body{
 .slide-box-containt{
   padding: 30px;
   color: #fff;
+  margin-bottom: 30px;
+  margin-left: 150px;
+  background: rgba(0, 0, 0, 0.8);
   font-size: 18px;
   opacity: 0;
-  background: rgba(0, 0, 0, 0.5);
   position: relative;
   left: -30px;
 }
 .slide-box:hover .slide-box-containt{
-  left: 20;
+  left: 0;
   opacity: 1;
-  margin-bottom: 20%;
-  margin-left: 20%;
   transition: all 0.4s ease-out 0.6s;
 }
 .slide-box-containt h2{
   margin:0 0 20px;
-  font-size: 40px;
-  color:#0087BD;
-    font-family: "Montserrat-Bold";
-/*  font-family: 'Roboto condense';*/
+  font-size: 34px;
 }
 .slide-box-containt p:last-child{
   margin: 0;
-  font-size: 20px;
-  font-family: 'Roboto condense';
+
+}
+@media screen and (max-width:770px){
+  .slide-box-containt{
+    padding: 30px;
+    color: #fff;
+    margin-bottom: 60px;
+    margin-left: 10px;
+    background: rgba(0, 0, 0, 0.7);
+    font-size: 18px;
+    opacity: 0;
+    position: relative;
+    left: -30px;
+  }
+  .slide-box-containt h2{
+    margin:0 0 20px;
+    font-size: 18px;
+  }
 }
 /*section2*/
 #service{
   width: 100%;
   padding: 76px 0;
-  background:white;/* #efefef;*/
+  background:white;
 }
 .title-text{
   text-align: center;
@@ -113,7 +128,6 @@ body{
     color: #0087BD;
   margin-bottom: 40px;
   font-family: "Montserrat-Bold";
-  /*font-family: 'Ubuntu';*/
   }
 .service-box{
   width: 80%;
@@ -251,8 +265,6 @@ hr{
      padding: 60px 0
  }
 #clients .clients-wrap {
-    /* border-top: 1px solid #d6eaff;
-     border-left: 1px solid #d6eaff;*/
      margin-bottom: 30px
  }
 #clients .client-logo {
@@ -269,8 +281,6 @@ hr{
      -webkit-align-items: center;
      -ms-flex-align: center;
      align-items: center;
-    /* border-right: 1px solid #d6eaff;
-     border-bottom: 1px solid #d6eaff;*/
      overflow: hidden;
      background: #fff;
      height: 160px
@@ -311,217 +321,128 @@ hr{
 
 /*footer*/
 footer{
-  position: 0;
-  bottom: 0;
-}
-.footer-distributed{
-  background-color: #292c2f;
-  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
-  box-sizing: border-box;
+  bottom: 0px;
   width: 100%;
-  text-align: left;
-  font: bold 16px sans-serif;
-  height:400px;
-  padding: 55px 50px;
-margin-top: 80px;
+  background: #111;
+  color: #d9d9d9;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
-
-.footer-distributed .footer-left,
-.footer-distributed .footer-center,
-.footer-distributed .footer-right{
-  display: inline-block;
-  vertical-align: top;
+.main-content{
+  display: flex;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
-
-.footer-distributed .footer-left{
-  width: 30%;
-  margin-left: 60px;
+.main-content .box{
+  flex-basis: 50%;
+  padding: 40px 20px;
 }
-.footer-distributed .footer-left h2{
-  font-size: 30px;
-  color: white;
+.box h2{
+  font-size: 1.125rem;
+  font-weight: 600;
+  /*text-transform: uppercase;*/
 }
-.footer-distributed h3{
-  color:  #ffffff;
-  font: normal 36px 'Cookie', cursive;
-  margin: 0;
+.left{
+  margin-left: 20px;
 }
-
-.footer-distributed h3 span{
-  color:  #5383d3;
-}
-
-
-.footer-distributed .footer-links{
-  color:  #ffffff;
-  margin: 20px 0 12px;
-  padding: 0;
-}
-
-.footer-distributed .footer-links a{
-  display:inline-block;
-  line-height: 2.8;
-  text-decoration: none;
-  color:  inherit;
-}
-.footer-distributed .foot1{
-  margin-top: 40px;
-}
-.footer-distributed .footer-company-name{
-  color:  #8f9296;
-  font-size: 14px;
-  font-weight: normal;
-  margin: 0;
-}
-
-.footer-distributed .footer-center{
-  width: 35%;
-  line-height: 10px;
-  color:  #92999f;
-  font-size: 18px;
-  font-weight: normal;
-  margin-left: 10px;
-  margin: 0;
-}
-
-.footer-distributed .footer-center i{
-  background-color:  #33383b;
-  color: #ffffff;
-  font-size: 25px;
-  width: 38px;
-  height: 38px;
-  border-radius: 50%;
-  text-align: center;
-  line-height: 42px;
-  margin: 10px 15px;
-  vertical-align: middle;
-}
-
-.footer-distributed .footer-center i.fa-envelope{
-  font-size: 17px;
-  line-height: 38px;
-}
-
-.footer-distributed .footer-center p{
-  display: inline-block;
-  color: #ffffff;
-  vertical-align: middle;
-  margin:0;
-}
-
-.footer-distributed .footer-center p span{
-  display:block;
-  font-weight: normal;
-  font-size:14px;
-  line-height:2;
-}
-.footer-distributed .footer-center h2{
-  color: white;
-}
-.footer-distributed .footer-center p{
-  color: #92999f;/*  #5383d3;*/
-  text-decoration: none;
-  margin-top: 40px;
-}
-
-.footer-distributed .footer-right{
-  width: 27%;
-  line-height: 20px;
-  color:  #92999f;
-  font-size: 18px;
-  font-weight: normal;
-  margin-top: 6px;
-
-}
-.footer-distributed .footer-company-about{
-  line-height: 30px;
-  color:  #92999f;
+.left p{
   font-size: 15px;
-  font-weight: normal;
-  letter-spacing: 1px;
-  margin: 0;
 }
+.box .content{
+  margin: 20px 0 0 0;
+  position: relative;
+}
+.box .content:before{
+  position: absolute;
+  content: '';
+  top: -10px;
+  height: 2px;
+  width: 100%;
+ background: #1a1a1a;
+}
+.box .content:after{
+  position: absolute;
+  content: '';
+  height: 2px;
+/*  width: 15%;*/
+  background: #f12020;
+  top: -10px;
+}
+.left .content p{
+  text-align: justify;
+}
+.left .content .social{
+  margin: 20px 0 0 0;
 
-.footer-distributed .footer-company-about span{
-  display: block;
-  color:  #ffffff;
-  font-size: 34px;
-  font-weight: bold;
-  margin-bottom: 30px;
 }
-.footer-distributed .footer-right h2{
-  color: white;
+.left .content .social a{
+  padding: 0 2px;
+    color: white;
 }
-.footer-distributed .footer-icons{
-  margin-top: 25px;
-}
-
-.footer-distributed .footer-icons a{
-  display: inline-block;
-  width: 35px;
-  height: 35px;
-  cursor: pointer;
-  /*background-color:  #33383b;*/
-  border-radius: 2px;
-
-  font-size: 20px;
-  color: #ffffff;
+.left .content .social a span{
+  height: 40px;
+  width: 40px;
+  background: #1a1a1a;
+  line-height: 40px;
   text-align: center;
-  line-height: 35px;
-
-  margin-right: 3px;
-  margin-bottom: 5px;
+  font-size: 18px;
+  border-radius: 5px;
+  transition: 0.3s;
 }
-.address{
-
-  line-height: 20px;
-  color:  #92999f;
-  font-size: 19px;
-  font-weight: normal;
-  margin: 0;
-  margin-top: 20px;
-  line-height: 32px;
+.left .content .social a span:hover{
+  background: #89CFF0;
+    color: gray;
 }
-/*media queriws*/
-@media (max-width: 880px) {
-
-  .footer-distributed{
-    font: bold 14px sans-serif;
-    background-color: #292c2f;
-    height: 100%;
-    text-align: center;
-
-  }
-
-  .footer-distributed .footer-left,
-  .footer-distributed .footer-center,
-  .footer-distributed .footer-right{
-    display: block;
-    width: 100%;
-    margin-bottom: 140px;
-    text-align: center;
-  }
-  .footer-distributed .footer-left{
-    margin-left:18px;
-    margin-top: 20px;
-  }
-    .footer-distributed .footer-center{
-      margin-right: 10px;
-    }
-  .footer-distributed .footer-center i{
-    margin-left: 0;
-  }
-  .main {
-    line-height: normal;
-    font-size: auto;
-  }
-
+.center{
+  margin-left: 80px;
 }
-
-
-
-@media screen and(max-width:320px){
-      footer input[type="button"]{
-        margin-top: 5%;
-      }
+.center .content .fas{
+  font-size: 1.4375rem;
+  background: #1a1a1a;
+  height: 45px;
+  width: 45px;
+  line-height: 45px;
+  text-align: center;
+  border-radius: 50%;
+  transition: 0.3s;
+  cursor: pointer;
+}
+.center .content .fas:hover{
+  background: #89CFF0;
+  color: gray;
+}
+.center .content .text{
+  font-size:15px;/* 1.0625rem;*/
+  font-weight: 500;
+  padding-left: 10px;
+}
+.center .content .phone{
+  margin: 15px 0;
+}
+.right h2{
+    margin-left: 40px;
+}
+.right .content{
+  margin-left: 45px;
+}
+.right .content .link{
+  text-decoration: none;
+    color: white;
+}
+.right .content .link:hover{
+  text-decoration: none;
+  color: #89CFF0;
+}
+@media screen and (max-width: 900px) {
+  footer{
+    position: relative;
+    bottom: 0px;
+  }
+  .main-content{
+    flex-wrap: wrap;
+    flex-direction: column;
+  }
+  .main-content .box{
+    margin: 5px 0;
+  }
 }
